Include association objects in clip4 and load them

BUG: 327834